css showed me shege

--- a/main.css
+++ b/main.css
@@ -14,7 +14,12 @@ html {
   scroll-behavior: smooth;
 }
 
-/* SECTIONS */
+@media (max-width: 356px) {
+  .logo {
+    width: 20px;
+  }
+}
+
 @media (max-width: 1025.33px) {
   .nav-div {
     width: 10px;
@@ -34,12 +39,6 @@ section {
 
 /* PROFILE SECTION */
 
-@media (max-width: 371.33px) {
-  .logo {
-    width: ;
-  }
-}
-
 @media (max-width: 335px) {
   .logo {
     width: 1em;
@@ -55,9 +54,9 @@ section {
 
 .section__pic-container {
   display: flex;
-  height: 400px;
-  width: 400px;
   margin: auto 0;
+  z-index: 1;
+  /* white-space: wrap; */
 }
 
 .section__text {
@@ -88,8 +87,6 @@ section {
   justify-content: center;
   margin-top: 1rem;
   gap: 1rem;
-  /* height: 40px !important; */
-  /* width: 30px !important; */
 }
 
 /* ICONS */
@@ -151,13 +148,6 @@ section {
   gap: 1rem;
 }
 
-.section__pic-container img {
-  border-radius: 50%;
-  width: 400px;
-  height: 400px;
-  object-fit: cover;
-}
-
 :root {
   --color-1: #2f3240;
 }
@@ -196,6 +186,7 @@ a {
   background-color: var(--color-1);
   padding: 12px 0;
   line-height: 1.5;
+  z-index: 100;
 }
 
 .header .logo,
@@ -297,7 +288,6 @@ a {
 }
 
 .header {
-  /* position: sticky; */
   top: 0;
   width: 100%;
 }
@@ -349,43 +339,6 @@ body {
   width: 100%;
 }
 
-/* MEDIA QUERY */
-/* @media (max-width: ) {
-} */
-
-@media (max-width: 596px) {
-  .home-div {
-    height: 80px;
-  }
-}
-
-@media (max-width: 600px) {
-  .home-div {
-    height: 530px;
-  }
-  .home-div {
-    height: 570px;
-  }
-}
-
-@media (max-width: 600px) {
-  .horizontal_line {
-    display: none;
-  }
-}
-
-@media (max-width: 530px) {
-  .home-div {
-    height: 520px;
-  }
-}
-
-@media (max-width: 420px) {
-  .home-div {
-    height: 475px;
-  }
-}
-
 @media (max-width: 448px) {
   .logo2 {
     font-size: 20px !important;
@@ -413,11 +366,6 @@ body {
 }
 
 @media screen and (max-width: 1200px) {
-  .section__pic-container img {
-    width: 275px;
-    height: 275px;
-    margin: 0 auto 2rem;
-  }
   #profile {
     display: block;
   }
@@ -427,11 +375,6 @@ body {
   }
   section {
     margin: 0 5%;
-  }
-  .section__pic-container {
-    width: 275px;
-    height: 275px;
-    margin: 0 auto 2rem;
   }
 }
 
@@ -447,9 +390,6 @@ body {
     justify-content: center;
   }
   .section__pic-container img {
-    /* width: auto; */
-    width: 50%;
-    height: 46vw;
     justify-content: center;
   }
 
@@ -508,11 +448,6 @@ h2 {
   border-radius: 5px;
 }
 
-.About-me {
-  width: 300px;
-  display: block;
-}
-
 p {
   margin: 0 0 20px;
 }
@@ -528,10 +463,6 @@ p {
     padding: 0;
   }
 
-  .About-me {
-    width: 500px;
-    margin-bottom: 20px;
-  }
   .pb-5 {
     display: flex;
     justify-content: center;
@@ -546,162 +477,9 @@ p {
   }
 }
 
-@media (max-width: 574px) {
-  #about-text {
-    width: 480px;
-  }
-}
-
-@media (max-width: 572px) {
-  #about-text {
-    width: 480px;
-  }
-}
-
-@media (max-width: 572px) {
-  .About-me {
-    width: 400px;
-  }
-}
-
-@media (min-width: 550px) {
-  .About-me {
-    width: 300px;
-  }
-
-  #about-text {
-    width: 400px;
-  }
-}
-
-@media (max-width: 550px) {
-  .About-me {
-    width: 300px;
-  }
-
-  #about-text {
-    width: 400px;
-  }
-}
-
-@media (max-width: 466px) {
-  .home-div {
-    width: 455px;
-  }
-  .div-header {
-    width: 455px;
-  }
-  .logo {
-    width: 10px;
-  }
-}
-
-@media (max-width: 975.33px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 820px;
-  }
-}
-
-@media (max-width: 911.33px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 750px;
-  }
-}
-
-@media (max-width: 836px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 700px;
-  }
-}
-
-@media (max-width: 786px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 650px;
-  }
-}
-
-@media (max-width: 734px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 600px;
-  }
-}
-
-@media (max-width: 681.33px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 560px;
-  }
-}
-
-@media (max-width: 638px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 500px;
-  }
-}
-
-@media (max-width: 576px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 460px;
-  }
-}
-
-@media (max-width: 533.33px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 410px;
-  }
-}
-
-@media (max-width: 481.33px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 360px;
-  }
-}
-
-@media (max-width: 430.33px) {
-  .para1,
-  .para2,
-  .para3 {
-    width: 330px;
-  }
-  .About-me {
-    width: 200px;
-  }
-}
-
 @media only screen and (max-width: 488px) {
   .logo2 {
     font-size: 20px !important;
-  }
-}
-
-@media only screen and (max-width: 470px) {
-  body {
-    width: 100%;
-  }
-}
-
-@media only screen and (max-width: 468px) {
-  body {
-    width: 100%;
   }
 }
 
@@ -713,12 +491,6 @@ p {
 .para2,
 .para3 {
   text-align: center;
-}
-
-@media (max-width: 380px) {
-  .pb-5 {
-    margin-right: 80px;
-  }
 }
 
 /* SERVICES */
@@ -779,17 +551,15 @@ p {
   color: #080808;
 }
 
-.skill-skill div:hover {
-  background-color: white !important;
+.para:hover {
+  color: black !important;
 }
-
 .boxx {
   background-color: black !important;
 }
 
 .box {
-  transition: all 0.8s !;
-  background-size: 100% 200%;
+  transition: all 0.8s;
 }
 
 .box:hover {
@@ -805,45 +575,11 @@ p {
 
 .services-container {
   background-color: #2f3240;
-  width: 100%;
-}
-
-@media (max-width: 1029.33px) {
-  .home-div {
-    height: 670px;
-  }
-  hr {
-    display: none;
-  }
 }
 
 @media (max-width: 420px) {
-  .pb-5 {
-    margin-left: 60px;
-    margin-top: 15px;
-  }
-
-  .home-div {
-    height: 100%;
-  }
-
-  .services-container {
-    width: 500px;
-  }
-  .home-div {
-    width: 500px;
-  }
-  .header {
-    width: 500px;
-  }
-  .para1,
-  .para2,
-  .para3 {
-    width: 100%;
-  }
   .about-me-heading {
     text-align: center;
-    margin-left: 100px;
   }
 
   .col.py-3 {
@@ -861,42 +597,10 @@ p {
   margin-top: 60px;
 }
 
-@media (max-width: 912px) {
-  .home-div {
-    height: 710px;
-  }
-}
-
-@media (max-width: 344px) {
-  .home-div {
-    height: 620px;
-  }
-}
-
 .para1,
 .para2,
 .para3 {
   text-align: left;
-}
-
-@media (max-width: 370px) {
-  .home-img {
-    height: 700px;
-    width: 300px;
-  }
-  .home-div {
-    height: 590px;
-  }
-}
-
-@media (max-width: 375px) {
-  /* .home-img{
-    height: 700px;
-    width: 300px;
-  } */
-  .home-div {
-    height: 590px !important;
-  }
 }
 
 .contacts a,
@@ -920,56 +624,6 @@ p {
 
 .quick-links a {
   font-size: 0.9em;
-}
-
-@media (max-width: 768px) {
-  .footer-para,
-  .contacts a span,
-  .quick-links a {
-    font-size: 0.8em;
-  }
-
-  .footer-heading {
-    font-size: 1em;
-  }
-}
-
-.footer-center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  margin-top: 20px;
-  text-align: center;
-}
-
-@media (max-width: 375px) {
-  .footer-container {
-    width: 500px;
-  }
-  .footer-center {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-  }
-}
-
-@media (max-width: 466px) {
-  .section__pic-container {
-    margin-top: 70px;
-  }
-}
-
-@media (max-width: 466px) {
-  .services-container {
-    width: 455px;
-  }
-}
-
-@media (max-width: 412px) {
-  .services-container {
-    width: 500px;
-  }
 }
 
 @media (max-width: 820px) {
@@ -998,7 +652,7 @@ p {
 
 .about-text,
 .about-text {
-  transition: margin-top 0.3s ease;
+  transition: 0.3s ease;
 }
 
 @media (min-width: 1280px) {
@@ -1011,37 +665,12 @@ p {
     margin-bottom: 30px;
     text-align: center;
   }
-  .home-div {
-    height: 600px;
-  }
-  hr {
-    display: none;
-  }
-  .about-whole {
-    height: 600px;
-  }
 }
 
 @media (max-width: 412px) {
-  .home-div {
-    height: 620px;
-  }
   .pb-5 {
     margin-right: 50px;
   }
-}
-
-@media (max-width: 430px) {
-  .home-div {
-    height: 600px;
-  }
-  .pb-5 {
-    margin-right: 40px;
-  }
-}
-
-.about {
-  margin-top: -30px !important;
 }
 
 .about-text,
@@ -1068,19 +697,9 @@ p {
   margin-bottom: 40px;
 }
 
-@media (max-width: 414px) {
-  .services-container {
-    width: 500px;
-  }
-}
-
 /* skills section  */
 
 .boxx {
-  height: 400px;
-  width: 1000px;
-  /* background-color: white; */
-  /* width:1000px ; */
   margin-left: -59px;
 }
 
@@ -1091,29 +710,8 @@ p {
 }
 
 .boxx {
-  margin-left: 5%; /* Set a percentage margin */
-  max-width: 100%;
+  margin-left: 5%;
   margin-left: -10px;
-}
-
-@media (max-width: 414px) {
-  .skills-div {
-    width: 500px;
-  }
-}
-
-.boxx:hover {
-  background-position: left bottom;
-  /* color: white; */
-  /* box-shadow: 0 0 20px rgb(131, 45, 45); */
-}
-
-/* .sub-title{
-  margin-bottom: 10px;
-} */
-
-.services-container {
-  height: 1000px;
 }
 
 @media (max-width: 1027.33px) {
@@ -1127,52 +725,10 @@ p {
   }
 }
 
-@media (max-width: 866px) {
-  .services-container {
-    height: 1100px;
-  }
-}
-
-@media (max-width: 682px) {
-  .services-container {
-    height: 1150px;
-  }
-}
-
-@media (max-width: 660px) {
-  .services-container {
-    height: 1200px;
-  }
-}
-
-@media (max-width: 560px) {
-  .services-container {
-    height: 1250px;
-  }
-}
-
-@media (max-width: 495.33px) {
-  .services-container {
-    height: 1300px;
-  }
-}
-
-@media (max-width: 490px) {
-  .services-container {
-    height: 1360px;
-  }
-}
-
-.box-div-1 > img {
-  width: 150px;
-  height: 150px;
-}
-
 .skill-skill {
   display: flex;
-  flex-wrap: wrap; /* Allow items to wrap to the next line */
-  justify-content: space-between; /* Distribute items evenly */
-  background-color: ;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .boxx {
@@ -1201,26 +757,10 @@ p {
 .box-div-4,
 .box-div-5,
 .box-div-6,
-.box-div-7,
-.box-div-8,
-.box-div-9 {
+.box-div-7 {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.box-div-1 img,
-.box-div-2 img,
-.box-div-3 img,
-.box-div-4 img,
-.box-div-5 img,
-.box-div-6 img,
-.box-div-7 img,
-.box-div-8 img,
-.box-div-9 img {
-  /* max-width: 100%; */
-  height: 100px;
-  width: 100px;
 }
 
 .para-para {
@@ -1232,30 +772,23 @@ p {
   flex: 1 1 calc(33.333% - 20px); /* Each item takes up 1/3 of the row minus the gap */
   box-sizing: border-box;
   text-align: center;
-  transition: transform 0.3s ease; /* Add transition for smooth zoom-out effect */
+  transition: transform 0.3s ease;
 }
 
-.boxx > span:hover {
-  transform: scale(1.1); /* Zoom out effect */
+/* .boxx > span:hover {
+  transform: scale(1.1); 
   transition: 0.5s;
   width: 10px;
-  /* background-color: #000435; */
-  /* color: #000435; */
-}
+} */
 
 .para-para {
-  color: black;
+  color: white;
   font-style: italic;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-
-/* span:hover{
-  color: black;
-}
- */
-
-@media (max-width: 860px) {
+/* ================================================== */
+/* @media (max-width: 860px) {
   .services-container {
     height: 2300px !important;
   }
@@ -1266,10 +799,9 @@ p {
 }
 
 .boxx {
-  background-color: cadetblue !important;
   height: 500px !important;
-}
-
+} */
+/* ====================================================== */
 /* projects */
 .projects-container {
   background-color: white;
@@ -1278,10 +810,6 @@ p {
 .project-title {
   color: black;
   text-align: center;
-}
-
-.box:hover {
-  /* background-color: white; */
 }
 
 @media (max-width: 414px) {
@@ -1306,106 +834,157 @@ p {
   height: 210px;
 }
 
-/* @media (max-width:299px) {
-.container{
-
-  margin-left: -25px;
-}
-.services-container{
-  width: 430px;
-}
-.about-whole{
-  
-  width: 100%;
-}
-.about-text{
-  width: 50px;
-}
-.services-para2{
-  word-wrap: break-word;
-
-}
-.serviceshearding2{
-white-space: nowrap;
-}
-.para1, .para2, .para3{
-  width: 400px;
-  margin-right: 20px;
-}
-.box{
-  width: 380px;
-}
-.home-div{
-  width: 440px;
-}
-#navbg {
-  width: 30px;
-  background-color: aqua;
-  height: auto;
-  width: 100%;
-}
-.logo2 {
-  width: 30px;
-  font-size: 5px;
-}
-} */
-
 .about-me-heading {
   white-space: nowrap;
 }
 
 @media (max-width: 301px) {
   #servicescontainer {
-    padding: 20px; /* Adjust padding as needed */
-    margin-bottom: 20px; /* Adjust margin as needed */
+    padding: 20px;
+    margin-bottom: 20px;
   }
 
   #container {
-    /* max-width: 800px; Adjust max-width as needed */
     width: 445px;
     margin-right: -50px;
     border-radius: 20px;
-    margin: 0 auto; /* Center align the container */
+    margin: 0 auto;
   }
 
   .sub-title {
-    text-align: center; /* Center align the subtitle */
+    text-align: center;
   }
   .services-container {
-    /* background: greenyellow; */
     height: 800vh;
   }
-  .boxx{
-    /* width: 2px; */
+  .boxx {
     height: 20px;
   }
 }
 
-
-.services-container{
+.services-container {
   background-color: white;
 }
 
-.sub-title{
+.sub-title {
   color: black !important;
   font-size: 35px !important;
 }
 
-
-
-.horiline{
+.horiline {
   border: px solid black !important;
 }
 
-@media(min-width:1030px) {
-  .about-me-heading{
+@media (min-width: 1030px) {
+  .about-me-heading {
     text-align: center;
   }
- 
 }
 
-@media(min-width:1030px) and (max-width:1030px){
-   hr{
+@media (min-width: 1030px) and (max-width: 1030px) {
+  hr {
     display: hr;
+  }
+}
+
+.boxx {
+  margin-left: 10px;
+  border-radius: 10px;
+}
+
+@media (max-width: 286px) {
+  .boxx {
+    margin-right: 35px;
+  }
+}
+
+@media (min-width: 374px) {
+  .para1,
+  .para2,
+  .para3 {
+    margin-left: -20px;
+  }
+}
+
+@media (min-width: 370px) {
+  .para1,
+  .para2,
+  .para3 {
+    margin-left: -20px;
+  }
+}
+
+/* -----------------------------------UNDERGOING CONSTRUCTION--------------------------------- */
+/* ----------------------------------------------------------------------------------------- */
+
+@media (min-width: 120px) and (max-width: 1440px) {
+  body {
+    width: 100%;
+  }
+}
+
+/* ================== CONSTRUCTION SITE(screen < 300px) ============== */
+
+/* @media (max-width: 300px) {
+  .entire-page, .div-header, .header {
+    width: 100%;
+  }
+} */
+
+/* .section__pic-container {
+  display: flex;
+  /* height: 400px;
+  width: 400px; */
+/* margin: auto 0; */
+
+.home-img {
+  /* display: flex; */
+  border-radius: 50%;
+}
+
+@media (min-width: 915px) {
+  .section__pic-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%; /* Ensure the container has a height */
+  }
+
+  /* .home-img {
+    max-width: 100%;
+    height: auto; 
+} */
+}
+
+@media (max-width: 915px) {
+  .section__pic-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* padding:40px; */
+    height: 50%; /* Ensure the container has a height */
+  }
+
+  .home-img {
+    max-width: 100%;
+    height: auto; /* Optional: to maintain the aspect ratio */
+  }
+  .section_text_p1 {
+    padding: 20px;
+  }
+}
+
+.home-img {
+  transform: translateY(-60px);
+}
+
+@media (min-width: 301px) and (max-width: 914px) {
+  .home-img {
+    margin-top: 169px;
+  }
+  .section_text_p1 {
+    padding: 40px;
+    margin-top: 50px;
   }
 }
